Decoración del menú para dispositivos móviles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="close" aria-label="Cerrar menú">
                     <img src="img/icon-close.svg" alt="Cerrar menú">
                 </button>
-                <li><a href="#Perfil">Perfil</a></li>
+                <li><a class="selected" href="#Perfil">Perfil</a></li>
                 <li><a href="#Experiencia">Experiencia</a></li>
                 <li><a href="#Habilidades">Habilidades</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
