Se agregaron las demás secciones

--- a/index.html
+++ b/index.html
@@ -36,10 +36,127 @@
                 <li><a class="selected" href="#Perfil">Perfil</a></li>
                 <li><a href="#Experiencia">Experiencia</a></li>
                 <li><a href="#Habilidades">Habilidades</a></li>
-                <li><a href="#Contacto">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
+
+    <div class="padd-h padd-y">
+        <section class="profile" id="Perfil">
+            <div class="profile_información">
+                <h1>Hola, mi nombre es <br/>Diana Walters</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae commodi ad excepturi molestias fugit itaque officia accusantium alias aliquid dignissimos! Distinctio, adipisci. Molestias maiores rerum sit deleniti fugit omnis excepturi maxime, dignissimos cumque eligendi nostrum incidunt, perspiciatis similique, possimus minima ipsam eveniet numquam repellendus ea autem eaque et optio voluptas illo! Inventore beatae repudiandae aperiam nostrum itaque possimus sequi vero.</p>
+            </div>
+            <div class="profile-img"></div>
+        </section>
+    </div>
+
+    <section class="exps" id="Experiencia">
+        <img class="wave" src="img/wave.svg" alt="">
+        <div class="exp-body">
+            <h2 class="exp-titulo">Experiencia</h2>
+            <div class="exp-grid">
+                <div class="vaciar"></div>
+                <div class="linea"></div>
+                <div class="exp">
+                    <div class="exp-fecha">2019-2023</div>
+                    <div class="exp-com">Sharp computer</div>
+                    <div class="exp-posc">junior software developer</div>
+                    <div class="exp-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis accusantium distinctio quia aspernatur iusto illum ipsum dolorum doloribus, ad obcaecati eum maiores, ut cumque laudantium eligendi a corrupti magni dicta vel! Obcaecati nemo ex, quas nulla harum quia minus perspiciatis consequuntur optio sed consequatur nobis officia quis distinctio. Autem illum asperiores possimus quas dicta ratione pariatur nobis iste quibusdam harum.</div>
+                </div>
+                <div class="exp">
+                    <div class="exp-fecha">2019-2023</div>
+                    <div class="exp-com">Sharp computer</div>
+                    <div class="exp-posc">junior software developer</div>
+                    <div class="exp-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis accusantium distinctio quia aspernatur iusto illum ipsum dolorum doloribus, ad obcaecati eum maiores, ut cumque laudantium eligendi a corrupti magni dicta vel! Obcaecati nemo ex, quas nulla harum quia minus perspiciatis consequuntur optio sed consequatur nobis officia quis distinctio. Autem illum asperiores possimus quas dicta ratione pariatur nobis iste quibusdam harum.</div>
+                </div>
+                <div class="linea"></div>
+                <div class="vaciar"></div>
+                <div class="vaciar"></div>
+                <div class="linea"></div>
+                <div class="exp">
+                    <div class="exp-fecha">2019-2023</div>
+                    <div class="exp-com">Sharp computer</div>
+                    <div class="exp-posc">junior software developer</div>
+                    <div class="exp-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis accusantium distinctio quia aspernatur iusto illum ipsum dolorum doloribus, ad obcaecati eum maiores, ut cumque laudantium eligendi a corrupti magni dicta vel! Obcaecati nemo ex, quas nulla harum quia minus perspiciatis consequuntur optio sed consequatur nobis officia quis distinctio. Autem illum asperiores possimus quas dicta ratione pariatur nobis iste quibusdam harum.</div>
+                </div>
+            </div>
+        </div>
+        <img class="wave_bottom" src="img/wave.svg" alt="">
+    </section>
     
+    <div class="padd-h padd-y">
+        <section class="habilidades" id="Habilidades">
+            <h2 class="habil-titulo">Habilidades</h2>
+            <ul class="habil-list">
+                <li class="habilidad">HTML</li>
+                <li class="habilidad">CSS</li>
+                <li class="habilidad">Js</li>
+                <li class="habilidad">Python</li>
+                <li class="habilidad">Java</li>
+                <li class="habilidad">C#</li>
+            </ul>
+        </section>
+    </div>
+
+<div class="padd-h padd-y">
+    <section id="contacto" class="contacto">
+        <h2 class="contacto-titulo">Contacto</h2>
+        <div class="contacto-det">
+            <div class="contacto-grupo">
+                <p class="contacto-label">Dirección</p>
+                <p class="contacto-text">6496 W Sherman Dr</p>
+            </div>
+            <form class="contacto-grupo">
+                <p class="contacto-label">Email</p>
+                <p class="contacto-text">diana.walters@example.com</p>
+            </form>
+            <div class="contacto-grupo">
+                <p class="contacto-text">Deje su mensaje</p>
+            </div>
+        </div>
+        <form action="" class="contacto-form">
+            <div class="contacto-form-grupo">
+                <Label form="nombre">Nombre</Label>
+                <input type="text" name="nombre" id="nombre">
+            </div>
+            <div class="contacto-form-grupo">
+                <Label form="email">Email</Label>
+                <input type="email" name="email" id="email">
+            </div>
+            <div class="contacto-form-grupo">
+                <Label form="mensaje">Mensaje</Label>
+                <textarea name="mensaje" id="mensaje" rows="6"></textarea>
+            </div>
+    
+            <button type="submit" class="contacto-enviar">Enviar</button>
+        </form>
+        <nav class="social">
+            <ul class="social-lista">
+                <li>
+                    <a href="https://facebook.com/" target="_blank">
+                        <img src="img/icon-facebook.svg" alt="perfil facebook" targe>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="img/icon-twitter.svg" alt="perfil twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com/" target="_blank">
+                        <img src="img/icon-linkedin.svg" alt="perfil linkedin">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/" target="_blank">
+                        <img src="img/icon-github.svg" alt="perfil github">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+</div>
+
 </body>
 </html>
